# ai-email-agent

./: .gitignore  _id.txt  pyproject.toml
src/ai_email_agent/: __init__.py  connection.py  globalFunction.py  main.py  model.py  supermen.py  tools.py
