[project]
name = "ai-email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.168.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "openai-agents[litellm]>=0.0.13",
]

[project.scripts]
ai-email-agent = "ai_email_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
